# grafika-hf-template

./: README.md  framework.cpp  framework.h  meson.build  src.cpp
.github/workflows/: ci.yml
src/: LineCollection.hpp  PointCollection.hpp  green.cpp  line.hpp  main.cpp  object.hpp  skeleton.cpp
